@@ -1,5 +1,5 @@
 .\" -*- nroff -*-
-.TH "FILTER SYNTAX" 8 "January 7, 2004"
+.TH "FILTER SYNTAX" 5 "January 7, 2004"
 
 .SH NAME
 rules.filter \- Input format for filtergen packet filter compiler
